--- a/app/src/main/res/layout-v28/activity_setting.xml
+++ b/app/src/main/res/layout-v28/activity_setting.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/background_gray"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
