--- a/app/src/main/res/layout-v28/activity_main.xml
+++ b/app/src/main/res/layout-v28/activity_main.xml
@@ -129,6 +129,12 @@
             android:layout_marginRight="@dimen/View32dp"
             android:layout_marginBottom="@dimen/View8dp"
             android:layout_marginLeft="@dimen/View32dp"
+            android:padding="0dp"
+            app:iconPadding="0dp"
+            android:insetLeft="0dp"
+            android:insetTop="0dp"
+            android:insetRight="0dp"
+            android:insetBottom="0dp"
             app:iconTint="@null"
             app:icon="@drawable/ic_close2"
             app:iconSize="24dp"
@@ -142,6 +148,12 @@
             android:layout_height="56dp"
             android:layout_marginEnd="@dimen/View32dp"
             android:layout_marginBottom="@dimen/View8dp"
+            android:padding="0dp"
+            app:iconPadding="0dp"
+            android:insetLeft="0dp"
+            android:insetTop="0dp"
+            android:insetRight="0dp"
+            android:insetBottom="0dp"
             app:iconTint="@null"
             app:icon="@drawable/ic_star"
             app:iconSize="24dp"
@@ -155,6 +167,12 @@
             android:layout_height="56dp"
             android:layout_marginEnd="@dimen/View32dp"
             android:layout_marginBottom="@dimen/View8dp"
+            android:padding="0dp"
+            app:iconPadding="0dp"
+            android:insetLeft="0dp"
+            android:insetTop="0dp"
+            android:insetRight="0dp"
+            android:insetBottom="0dp"
             app:iconTint="@null"
             app:icon="@drawable/ic_heart"
             app:iconSize="24dp"
