--- a/app/src/main/res/layout/activity_setting_main.xml
+++ b/app/src/main/res/layout/activity_setting_main.xml
@@ -119,9 +119,9 @@
                     android:id="@+id/vip"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/View32dp"
+                    android:layout_marginStart="@dimen/View32dp"
                     android:layout_marginTop="@dimen/View20dp"
-                    android:layout_marginRight="@dimen/View36dp"
+                    android:layout_marginEnd="@dimen/View32dp"
                     android:layout_marginBottom="@dimen/View12dp"
                     android:background="@drawable/roundlike"
                     android:clickable="true"
