--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,10 @@
     <color name="v2">#ac80dd</color>
     <color name="v3">#f9efda</color>
     <color name="v4">#f6e4c1</color>
+    <color name="cyan">#28F3AC</color>
+    <color name="white_grey">#8A8686</color>
+
+
     <integer-array name="candy_color">
         <item>@color/v1</item>
         <item>@color/v1</item>
