--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="text_gray">#9A9A9A</color>
     <color name="text_black_gray">#292929</color>
     <color name="background_gray">#F1F1F1</color>
-    <color name="background_white">#FFFDFA</color>
+    <color name="background_white">#FFFFFF</color>
     <color name="red">#FF004E</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#FF000000</color>
