--- a/app/src/main/res/layout/question_ask_dialog.xml
+++ b/app/src/main/res/layout/question_ask_dialog.xml
@@ -12,13 +12,22 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+            <TextView
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:text="@string/out_of_quota"
+                android:layout_marginTop="@dimen/View24dp"
+                android:layout_gravity="center"
+                android:textSize="@dimen/Text20sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
         <ImageView
             android:layout_marginEnd="@dimen/View8dp"
             android:layout_marginStart="@dimen/View8dp"
             android:layout_gravity="center"
             android:id="@+id/textAskQuestion"
             android:layout_marginTop="@dimen/View32dp"
-            android:background="@drawable/question"
+            android:background="@drawable/unicorn_attention"
             android:layout_width="86dp"
             android:layout_height="86dp"/>
         <TextView
@@ -28,7 +37,7 @@
             android:textStyle="bold"
             android:text="@string/title_askQuestion"
             android:textSize="@dimen/Text16sp"
-            android:layout_marginTop="@dimen/View32dp"
+            android:layout_marginTop="@dimen/View16dp"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
