--- a/app/src/main/res/layout/question_dialog.xml
+++ b/app/src/main/res/layout/question_dialog.xml
@@ -80,10 +80,18 @@
             android:layout_height="wrap_content">
             <TextView
                 android:textStyle="bold"
-                android:textColor="@color/c3"
+                android:textColor="@color/cpb_red"
                 android:id="@+id/QA_dismiss"
                 android:padding="@dimen/View8dp"
                 android:text="@string/dismiss_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:textStyle="bold"
+                android:textColor="@color/c3"
+                android:id="@+id/QA_skip"
+                android:padding="@dimen/View8dp"
+                android:text="@string/skip_QA"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
