--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="background_gray">#F1F1F1</color>
     <color name="background_white">#FFFFFF</color>
     <color name="red">#FF004E</color>
+    <color name="light_red">#ED666B</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#FF000000</color>
     <color name="y1">#ffe07d</color>
@@ -18,6 +19,7 @@
     <color name="v3">#f9efda</color>
     <color name="v4">#f6e4c1</color>
     <color name="cyan">#28F3AC</color>
+    <color name="success_green">#42ba96</color>
     <color name="white_grey">#8A8686</color>
 
 
