--- a/app/src/main/res/layout/question_dialog.xml
+++ b/app/src/main/res/layout/question_dialog.xml
@@ -73,30 +73,27 @@
                         android:text="@string/QA_choice5"/>
                 </RadioGroup>
         <LinearLayout
+            android:layout_marginTop="@dimen/View8dp"
             android:padding="@dimen/View4dp"
             android:gravity="end"
             android:layout_width="match_parent"
             android:orientation="horizontal"
             android:layout_height="wrap_content">
-            <TextView
+            <Button
+                android:layout_marginStart="@dimen/View8dp"
+                android:layout_marginEnd="@dimen/View8dp"
+                android:theme="@style/Theme.MaterialComponents.buttonLightRed"
                 android:textStyle="bold"
-                android:textColor="@color/cpb_red"
+                android:textColor="@color/white"
                 android:id="@+id/QA_dismiss"
                 android:padding="@dimen/View8dp"
                 android:text="@string/dismiss_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
-            <TextView
+            <Button
+                android:theme="@style/Theme.MaterialComponents.successGreen"
                 android:textStyle="bold"
-                android:textColor="@color/c3"
-                android:id="@+id/QA_skip"
-                android:padding="@dimen/View8dp"
-                android:text="@string/skip_QA"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:textStyle="bold"
-                android:textColor="@color/c3"
+                android:textColor="@color/white"
                 android:id="@+id/QA_confirm"
                 android:padding="@dimen/View8dp"
                 android:text="@string/next_QA"
@@ -105,6 +102,7 @@
 
         </LinearLayout>
         <LinearLayout
+            android:layout_marginTop="@dimen/View4dp"
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
