--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,7 +19,7 @@
     <color name="v3">#f9efda</color>
     <color name="v4">#f6e4c1</color>
     <color name="cyan">#28F3AC</color>
-    <color name="success_green">#42ba96</color>
+    <color name="success_green">#4CDFB3</color>
     <color name="white_grey">#8A8686</color>
 
 
