--- a/app/src/main/res/layout-v28/activity_like_you.xml
+++ b/app/src/main/res/layout-v28/activity_like_you.xml
@@ -70,6 +70,7 @@
 
     <ProgressBar
         android:id="@+id/progress_like"
+        android:background="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
