--- a/app/src/main/res/layout/activity_setting_main.xml
+++ b/app/src/main/res/layout/activity_setting_main.xml
@@ -68,14 +68,7 @@
                     android:layout_marginTop="@dimen/View20dp"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/vvip"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_gravity="center"
-                        android:layout_marginRight="@dimen/View8dp"
-                        android:textColor="@color/c2"
-                        android:visibility="gone" />
+
 
                     <TextView
                         android:id="@+id/pre_name_profile"
@@ -97,6 +90,12 @@
                         android:text="21"
                         android:textColor="@color/text_black_gray"
                         android:textSize="@dimen/Text20sp" />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/ic_baseline_autorenew_24"
+                        app:tint="@color/c3" />
 
                 </LinearLayout>
 
