--- a/app/src/main/res/layout/activity_setting_main.xml
+++ b/app/src/main/res/layout/activity_setting_main.xml
@@ -24,6 +24,7 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -90,28 +91,47 @@
                         android:text="21"
                         android:textColor="@color/text_black_gray"
                         android:textSize="@dimen/Text20sp" />
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:orientation="horizontal">
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginStart="@dimen/View8dp"
+                            android:src="@drawable/ic_baseline_autorenew_24"
+                            app:tint="#B3FFA726" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="#B3FFA726"
+                            android:text="refresh"/>
+                    </LinearLayout>
 
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/ic_baseline_autorenew_24"
-                        app:tint="@color/c3" />
+
 
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/View8dp"
+                    android:layout_marginStart="@dimen/View8dp"
+                    android:gravity="center"
+                    android:layout_marginTop="@dimen/View8dp"
                     android:orientation="horizontal">
+
+
 
                     <TextView
                         android:id="@+id/aa"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/View8dp"
-                        android:text="@string/touch"
                         android:textColor="@color/text_gray"
+
                         android:textSize="@dimen/Text16sp" />
+
                 </LinearLayout>
 
                 <TextView
