--- a/app/src/main/res/layout/sayhi_dialog.xml
+++ b/app/src/main/res/layout/sayhi_dialog.xml
@@ -24,10 +24,11 @@
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/View8dp"
         android:text="@string/text_hi"
-        android:textColor="@color/c3"
+        android:textColor="@color/text_black_gray"
         android:textSize="@dimen/Text20sp"
-        android:layout_gravity="start"
+        android:layout_gravity="center"
         />
 
 
@@ -37,16 +38,20 @@
         android:layout_height="wrap_content"
         android:textSize="@dimen/Text16sp"
         android:hint="@string/Send_a_message_to"
+        android:gravity="center"
         />
+
     <Button
-        android:background="@color/float_transparent"
-        android:layout_marginTop="@dimen/View16dp"
+
+        android:layout_marginTop="@dimen/View8dp"
+        android:paddingStart="@dimen/View16dp"
+        android:paddingEnd="@dimen/View16dp"
         android:id="@+id/buy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/send_message"
-        android:layout_gravity="end"
-        android:textColor="@color/c3"
+        android:layout_gravity="center"
+        android:textColor="@color/white"
         android:padding="0dp"
         />
 </LinearLayout>
