--- a/app/src/main/res/layout/item_matches.xml
+++ b/app/src/main/res/layout/item_matches.xml
@@ -71,12 +71,12 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:ellipsize="end"
-                        android:maxLines="1"
-                        android:maxEms="8"
                         android:id="@+id/Matches_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:maxEms="8"
+                        android:maxLines="1"
                         android:textColor="#EC407A"
                         android:textSize="@dimen/Text16sp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -84,7 +84,6 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:visibility="visible"
                         android:id="@+id/tagkm"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -94,7 +93,7 @@
                         android:textAlignment="center"
                         android:textColor="@color/c3"
                         android:textSize="@dimen/Text16sp"
-                         />
+                        android:visibility="gone" />
 
 
                 </LinearLayout>
@@ -109,12 +108,12 @@
 
                 <TextView
                     android:id="@+id/chat_unread"
-                    android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/background_unread"
                     android:paddingStart="@dimen/View8dp"
                     android:paddingEnd="@dimen/View8dp"
+                    android:text="0"
                     android:textAlignment="viewEnd"
                     android:textColor="#FFFFFF"
                     android:textSize="@dimen/Text14sp"
@@ -126,6 +125,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/Latest_chat"
                     android:layout_width="wrap_content"
@@ -142,7 +142,7 @@
                     android:textAlignment="viewEnd"
                     android:textSize="@dimen/Text14sp"
 
-                     />
+                    />
             </LinearLayout>
 
             <TextView
@@ -160,9 +160,10 @@
                 android:layout_height="match_parent"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:visibility="visible"
                 android:textColor="@color/text_gray"
-                android:textSize="@dimen/Text14sp" />
+                android:textSize="@dimen/Text14sp"
+                android:visibility="gone" />
+
             <TextView
                 android:id="@+id/status_time"
                 android:layout_width="wrap_content"
