--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,7 +15,11 @@
         <item name="extendedFloatingActionButtonStyle">@style/Widget.App.ExtendedFloatingActionButton</item>
         <item name="floatingActionButtonStyle">@style/Widget.App.FloatingActionButton</item>
         <item  name="android:windowActivityTransitions">true</item>
+        <item name="android:windowBackground">@drawable/splash_screen</item>
+
     </style>
+
+
 
     <style name="changfont" parent="AppTheme">
         <item name="fontFamily">@font/k2d_bold</item>
